# Sokoban

./: GlossExtras.hs  README.md  Sokoban.cabal  Sokoban.hs  TODO.md  TarefaD.hs  TarefaE.hs  install.sh
TarefaF/: JogoSokoban.hs
src/: Sokoban.hs
