name:                Sokoban
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jcm300/Sokoban#readme
license:             MIT
license-file:        LICENSE
author:              José Carlos Lima Martins
maintainer:          zeclmartins@gmail.com
copyright:           2018 José Carlos Lima Martins
category:            App
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Sokoban
  hs-source-dirs:      src
  main-is:             Sokoban.hs
  default-language:    Haskell2010
  build-depends:       directory, gloss, text, base >= 4.7 && < 5
